Fixed title cutoff; fixed pluralization syntax for alarms

--- a/src/components/FullLayout.css
+++ b/src/components/FullLayout.css
@@ -27,10 +27,11 @@
   position: absolute;
   left: 50px;
   top: 15px;
-  width: 30%;
+  /*width: 30%;*/
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  width: 90%;
 }
 .ViewInLizardButton {
   position: absolute;
